# ShaderAlchemy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ShaderAlchemy.sln  imgui.ini
ShaderAlchemy/: EditorPanel.cpp  EditorPanel.h  Framebuffer.cpp  Framebuffer.h  FullScreenRenderPass.cpp  FullScreenRenderPass.h  Geometry.cpp  ImGuiConsole.cpp  ImGuiConsole.h  ImGuiTextColorEditor.cpp  ImGuiTextColorEditor.h  LanguageDefinations.cpp  Model.cpp  Model.h  ModelInputRenderPass.cpp  ModelInputRenderPass.h  RenderPass.cpp  RenderPass.h  Shader.cpp  Shader.h  ShaderAlchemy.vcxproj  ShaderAlchemy.vcxproj.filters  ShaderProgramSource.cpp  Texture.cpp  Texture.h  VertexInput.cpp  VertexInput.h  application.cpp  application.h  imgui.ini  main.cpp
ShaderAlchemy/Shaders/: ModelInputFragment.glsl  ModelInputVertex.glsl  PreviewFragment.glsl  ShaderToyBaseFragment.glsl  ShaderToyBaseVertex.glsl
Shaders/: ModelInputFragment.glsl  ModelInputVertex.glsl  PreviewFragment.glsl  PreviewVertex.glsl  ShaderToyBaseFragment.glsl
src/: Application.cpp  Application.h  EditorPanel.cpp  EditorPanel.h  FullScreenRenderPass.cpp  Geometry.h  ImGuiConsole.h  Model.cpp  ModelInputRenderPass.cpp  RenderPass.cpp  RenderPass.h  ShaderProgramSource.h  TextEditor.cpp  TextEditor.h  Utils.cpp  Utils.h  main.cpp
src/glad/: gl.c  gl.h  wgl.h
